[gd_scene load_steps=7 format=3 uid="uid://cl7q5ig7ld66d"]

[ext_resource type="Script" path="res://level/desert/desert_level.gd" id="1_0mk17"]
[ext_resource type="PackedScene" uid="uid://dc2b421wo8kwx" path="res://background/platforms/floating_platform.tscn" id="1_fk405"]
[ext_resource type="PackedScene" uid="uid://blubiq053mo8n" path="res://char/player/desert_char.tscn" id="2_3cbxh"]
[ext_resource type="Script" path="res://level/desert/DesertCamera.gd" id="4_gbyc8"]
[ext_resource type="PackedScene" uid="uid://bkiupjnxtypyq" path="res://background/desert/desert_background.tscn" id="4_o7y5l"]
[ext_resource type="PackedScene" uid="uid://fal1qtcarj7a" path="res://level/desert/proto_set_piece/desert_proto_set_piece.tscn" id="7_hf48q"]

[node name="DesertLevel" type="Node2D"]
script = ExtResource("1_0mk17")
_r_1 = 345
_r_2 = 510

[node name="FloatingPlatform" parent="." instance=ExtResource("1_fk405")]
z_index = 2

[node name="DesertChar" parent="." instance=ExtResource("2_3cbxh")]
position = Vector2(0, -200)

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="FloatingPlatform2" parent="." instance=ExtResource("1_fk405")]
z_index = 2
position = Vector2(0, 133)
scale = Vector2(35.505, 1)

[node name="DesertCamera" type="Camera2D" parent="."]
position = Vector2(0, -150)
position_smoothing_speed = 2.0
drag_left_margin = 0.33
drag_top_margin = 0.33
drag_right_margin = 0.33
drag_bottom_margin = 0.21
editor_draw_limits = true
editor_draw_drag_margin = true
script = ExtResource("4_gbyc8")

[node name="DesertBackground" parent="DesertCamera" instance=ExtResource("4_o7y5l")]
z_index = -1
position = Vector2(0, 150)

[node name="DesertProtoSetPiece" parent="." instance=ExtResource("7_hf48q")]
position = Vector2(-1033, -10)

[connection signal="char_landed" from="DesertChar" to="." method="_on_desert_char_char_landed"]
[connection signal="set_platform_attempted" from="DesertChar" to="." method="_on_desert_char_set_platform_attempted"]
